<resources>
    <string name="app_name">PHP Tutorial</string>
    <string name="welcome_message">Welcome to PHP Tutorials</string>


    <!-- login page -->
    <string name="login_page_title">LOGIN</string>
    <string name="btnLogin">L O G I N</string>
    <string name="lnkRegister">New here? Register</string>
    <string name="lnkForgotPass">Forgot Password ?</string>

    <!-- registration page -->
    <string name="create_a_new_account_title">CREATE NEW ACCOUNT</string>
    <string name="tvFirstName">First Name</string>
    <string name="tvLastName">Last Name</string>
    <string name="tvEmail">Email</string>
    <string name="tvPassword">Password</string>
    <string name="tvConfirmPassword">Confirm Password</string>
    <string name="btnRegister">R E G I S T E R</string>
    <string name="lnkLogin">Already Member ? Login</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- toolbar menu items -->
    <string name="create_post">Create Post</string>
    <string name="action_settings">Settings</string>
    <string name="developer">Developer</string>
    <string name="contribute">Contribute</string>
    <string name="aboutapp">About App</string>
    <string name="logout">Log out</string>

    <!-- navigation drawer item values -->
    <string name="menu_home">HOME</string>
    <string name="menu_create_post">CREATE POST</string>
    <string name="menu_manage_post">MANAGE POSTS</string>
    <string name="menu_my_post">MY POSTS</string>


    <!-- field validation error messages -->
    <string name="firstNameError">Enter a valid First Name.</string>
    <string name="lastNameError">Enter a valid Last Name.</string>
    <string name="emailError">Enter a valid Email Address.</string>
    <string name="passwordError">Password Required, of Greater then 6 Character. </string>
    <string name="confirmPasswordError">Password does not match.</string>
    <string name="amountRequiredError">Enter valid Amout value.</string>

    <!-- add post screen -->
    <string name="tv_author_hint">Author: </string>
    <string name="tv_post_title_hint">Post Title</string>
    <string name="tv_post_content_hint">Post Content</string>
    <string name="btn_create_post">CREATE POST</string>
    <string name="btn_select_image_post_title">Select Image for Post Title</string>
    <string name="btn_select_image_post_content">Select Image for Post Description</string>

    <!-- progress  dialog strings -->
    <string name="login_dialog_title">Logging you in, Please wait...</string>

    <!-- activity titles -->
    <string name="title_activity_single_post">Read Post</string>
    <string name="title_activity_zoomed_image">View Image</string>
    <string name="title_activity_donate">Donate Now</string>
    <string name="title_activity_contribute">Contribute</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_developer">Developers</string>
    <string name="title_activity_about_app">About App</string>

    <!-- long texts -->
    <string name="contribute_text">Make Contribution, it will help us to create Great apps like PHP Tutorial.</string>


    <!-- textview placeholders -->
    <string name="enter_amount_placeholder">Enter Amount (Ex. 100)</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
