<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/iteamCreatePost"
        android:title="@string/create_post"
        android:icon="@mipmap/plus"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/iteamSettings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@mipmap/cogs"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/iteamContribute"
        android:icon="@mipmap/money"
        android:orderInCategory="100"
        android:title="@string/contribute"
        app:showAsAction="never" />

    <item
        android:id="@+id/iteamDeveloper"
        android:orderInCategory="100"
        android:title="@string/developer"
        android:icon="@mipmap/code"
        app:showAsAction="never" />


    <item
        android:id="@+id/iteamAboutApp"
        android:orderInCategory="100"
        android:title="@string/aboutapp"
        android:icon="@mipmap/code"
        app:showAsAction="never" />

    <item
        android:id="@+id/iteamLogout"
        android:orderInCategory="100"
        android:title="@string/logout"
        android:icon="@mipmap/code"
        app:showAsAction="never" />

</menu>
