<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account_title"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="135dp"
        app:srcCompat="@drawable/logo"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/tvFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/tvFirstName"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/tvLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/tvLastName"
        android:inputType="textCapCharacters" />
    <LinearLayout
        android:id="@+id/rootContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvEmail"
        android:inputType="textEmailAddress"
        android:id="@+id/tvEmail"
        android:autofillHints="" />

    <EditText
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/tvConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvConfirmPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/btnRegister"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lnkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lnkLogin" />

</LinearLayout>