<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="10dp"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_page_title"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="135dp"
        app:srcCompat="@drawable/logo"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/tvEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:id="@+id/tvPassword"/>

    <CheckBox
        android:id="@+id/cbRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Keep me Logged In"
        android:checked="true"
        />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/btnLogin"
        android:textColor="#fff"
        android:textSize="16sp" />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="horizontal"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="30dp">

       <TextView
           android:id="@+id/lnkRegister"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/lnkRegister" />

       <TextView
           android:id="@+id/lnkForgotPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="right"
           android:gravity="right"
           android:text="@string/lnkForgotPass" />
   </LinearLayout>

</LinearLayout>