<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.AddPost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <EditText
                    android:id="@+id/tvPostTitle"
                    style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="none"
                    android:hint="@string/tv_post_title_hint"
                    android:inputType="textCapCharacters"
                    android:background="@drawable/edittext_border_color"
                    android:layout_marginBottom="5dp"
                    android:autofillHints="" />
                <Button
                    android:id="@+id/btnPostTitleImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/btn_select_image_post_title" />
                <ImageView
                    android:id="@+id/ivPostTitle"
                    android:layout_width="500px"
                    android:layout_height="400px"
                    android:layout_marginBottom="25dp"
                    android:visibility="gone"
                    android:layout_gravity="center"/>
                <EditText
                    android:id="@+id/tvPost"
                    style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:hint="@string/tv_post_content_hint"
                    android:background="@drawable/edittext_border_color"
                    android:layout_marginBottom="5dp"/>
                <Button
                    android:id="@+id/btnPostContentImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/btn_select_image_post_content" />
                <ImageView
                    android:id="@+id/ivPostContent"
                    android:layout_width="500px"
                    android:layout_height="400px"
                    android:layout_marginBottom="25dp"
                    android:visibility="gone"
                    android:layout_gravity="center"/>
                <ToggleButton
                    android:id="@+id/btnCreatePost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/colorPrimary"
                    android:clickable="true"
                    android:text="@string/btn_create_post"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textOff="@string/btn_create_post"
                    android:textOn="@string/btn_create_post"
                    android:textSize="16sp" />
        </LinearLayout>
        </ScrollView>
    </LinearLayout>

